# arcane

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ENGINE-REVIEW.md  LICENSE  MIGRATION-0.21.md  README.md  check-types.sh  package-lock.json  package.json  run-coverage-rust.sh  run-coverage.sh  run-tests.sh  tsconfig.declarations.json  tsconfig.json
.arcane/snapshots/: 1770666683353.json  1770666683360.json  1770666683394.json  1770666683396.json  1770666683397.json  1770666683399.json  1770666683406.json  1770666683415.json  1770666683424.json  1770666683431.json  1770666683439.json  1770666683448.json  1770666683456.json  1770666683465.json  1770666683474.json  1770666683481.json  1770666683490.json  1770666683498.json  1770666683506.json  1770666683515.json  1770666683523.json  1770666683531.json  1770666683540.json  1770666683548.json  1770666683556.json  1770666683565.json  1770666683573.json  1770666683581.json  1770666683590.json  1770666683598.json  1770666683607.json  1770666683615.json  1770666683623.json  1770666683631.json  1770666683640.json  1770666683648.json  1770666683656.json  1770666683665.json  1770666683673.json  1770666683681.json  (+4086 more)
.claude/agents/: arcane-tester.md  rust-engine.md  ts-runtime.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml
assets/: catalog.json
catalog/: catalog.json
catalog/html/: browse.html  gallery.html  sheet.html  sounds.html
cli/: Cargo.toml  build.rs
cli/src/: main.rs
cli/src/commands/: add.rs  assets.rs  assets_oga.rs  catalog.rs  check.rs  describe.rs  dev.rs  init.rs  inspect.rs  mcp_bridge.rs  mod.rs  new.rs  screenshot.rs  test.rs  type_check.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/agent/: inspector.rs  mcp.rs  mod.rs
core/src/audio/: mod.rs
core/src/physics/: broadphase.rs  constraints.rs  integrate.rs  mod.rs  narrowphase.rs  resolve.rs  sleep.rs  types.rs  world.rs
core/src/platform/: gamepad.rs  input.rs  mod.rs  touch.rs  window.rs
core/src/renderer/: camera.rs  font.rs  geometry.rs  gpu.rs  lighting.rs  mod.rs  msdf.rs  postprocess.rs  radiance.rs  rendertarget.rs  sdf.rs  shader.rs  sprite.rs  test_harness.rs  texture.rs  tilemap.rs
core/src/renderer/shaders/: geom.wgsl  msdf.wgsl  radiance.wgsl  sdf_ops.wgsl  sdf_primitives.wgsl  sprite.wgsl
core/src/scripting/: geometry_ops.rs  mod.rs  module_loader.rs  particle_ops.rs  physics_ops.rs  render_ops.rs  replay_ops.rs  runtime.rs  sdf_ops.rs  target_ops.rs  test_runner.rs
core/tests/: audio_tests.rs  eval_to_string_test.rs  module_loader_test.rs  physics_tests.rs  renderer_gpu_tests.rs  save_ops.rs  test_runner_test.rs
core/tests/fixtures/: hello.ts  simple.test.ts  uuid_test.ts
demos/agent-testing/: agent-testing.test.ts
demos/asteroids/: asteroids.ts
demos/audio-showcase/: audio-showcase.ts
demos/bfrpg-crawler/: bfrpg-crawler.test.ts  bfrpg-crawler.ts  bfrpg-visual.ts  game.ts  integration.test.ts  types.ts
demos/breakout/: breakout-visual.ts  breakout.test.ts  breakout.ts
demos/card-battler/: card-battler.test.ts  card-battler.ts
demos/character-controller/: character-controller.test.ts  character-controller.ts
demos/gamepad-platformer/: gamepad-platformer.ts
demos/hello-world/: .gitignore  README.md  package.json  tsconfig.json
demos/hex-strategy/: hex-strategy.ts
demos/isometric-dungeon/: isometric-dungeon.ts
demos/juice-showcase/: juice-showcase.ts
demos/lighting-showcase/: lighting-showcase.ts
demos/menu-flow/: menu-flow.ts
demos/msdf-text-showcase/: msdf-text-showcase.ts
demos/parallax-scroller/: parallax-scroller.ts
demos/physics-playground/: physics-playground.ts
demos/platformer/: platformer-visual.ts  platformer.test.ts  platformer.ts
demos/roguelike/: dungeon.ts  fov.ts  roguelike-visual.ts  roguelike.test.ts  roguelike.ts
demos/sdf-effects/: README.md  sdf-effects.ts
demos/sdf-primitives/: README.md  sdf-primitives.ts
demos/sdf-scene/: README.md  sdf-scene.ts
demos/sdf-vs-sprite/: sdf-vs-sprite.ts
demos/shader-showcase/: main.ts
demos/shapes-showcase/: README.md  shapes-showcase.ts
demos/sokoban/: sokoban-visual.ts  sokoban.test.ts  sokoban.ts
demos/sprite-demo/: README.md  sprite-demo.ts
demos/tilemap-showcase/: tilemap-showcase.ts
demos/tower-defense/: tower-defense-visual.ts  tower-defense.test.ts  tower-defense.ts
demos/ui-showcase/: ui-showcase.ts
docs/: agent-protocol.md  agent-tooling.md  api-design.md  api-reference.md  architecture.md  asset-management.md  assets.md  development-workflow.md  documentation-refresh.md  engineering-philosophy.md  game-state.md  getting-started.md  glossary.md  hot-reload-fix-plan.md  level-editor-design.md  phase-10-rendering-polish-scoping.md  phase-11-input-ui-scoping.md  phase-7-plan.md  phase-8-scenes-persistence-scoping.md  phase-9-physics-scoping.md  publishing-guide.md  recipe-guide.md  rendering-issues.md  rendering-philosophy.md  roadmap.md  sdf-shapes.md  systems-and-recipes.md  technical-decisions.md  testing-hot-reload.md  tutorial-rpg.md  tutorial-sokoban.md  visual-pipeline.md  visual-testing-foundation.md  visual-testing.md  world-authoring.md
examples/: README.md
examples/sokoban/: README.md  (+2 more)
runtime/: arcane-import.test.ts  arcane-simple.test.ts  index.ts  runtime
scripts/: bump-version.sh  generate-declarations.sh  prepublish.sh  run-gpu-tests.sh  smoke-test.sh
(+356 files in other folders)
