[package]
name = "arcane-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "arcane"
path = "src/main.rs"

[dependencies]
arcane-core = { path = "../core", features = ["renderer"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
notify = "7"
notify-debouncer-mini = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
