[package]
name = "arcane-cli"
version = "0.10.0"
edition.workspace = true
license.workspace = true
description = "CLI for Arcane - agent-native 2D game engine (dev server, testing, project scaffolding)"
repository = "https://github.com/anthropics/arcane"
homepage = "https://github.com/anthropics/arcane"
documentation = "https://docs.rs/arcane-cli"
keywords = ["game-engine", "cli", "gamedev", "2d"]
categories = ["command-line-utilities", "game-engines", "development-tools"]
readme = "../README.md"
include = ["src/**/*", "Cargo.toml", "build.rs", "data/**/*"]

[[bin]]
name = "arcane"
path = "src/main.rs"

[dependencies]
arcane-engine = { version = "0.10.0", path = "../core", features = ["renderer"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
ureq = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
scraper = "0.22"
urlencoding = "2"
