[package]
name = "arcane-engine"
version = "0.14.1"
edition.workspace = true
license.workspace = true
description = "Arcane game engine — agent-native 2D engine with embedded TypeScript runtime"
repository = "https://github.com/anthropics/arcane"
homepage = "https://github.com/anthropics/arcane"
documentation = "https://docs.rs/arcane-engine"
keywords = ["game-engine", "2d", "gamedev", "typescript", "v8"]
categories = ["game-engines", "development-tools", "game-development"]
readme = "../README.md"
include = ["src/**/*", "Cargo.toml", "build.rs", "data/**/*"]

[[bin]]
name = "arcane"
path = "src/main.rs"

[dependencies]
arcane-core = { version = "0.14.1", path = "../core", features = ["renderer"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
