[package]
name = "arcane-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
deno_core = "=0.385.0"
deno_ast = { version = "=0.53.0", features = ["transpiling"] }
deno_error = "=0.7.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Renderer dependencies (behind feature flag)
wgpu = { version = "24", optional = true }
winit = { version = "0.30", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
bytemuck = { version = "1", optional = true, features = ["derive"] }
notify = { version = "7", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }
pollster = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

[features]
default = ["renderer"]
renderer = ["dep:wgpu", "dep:winit", "dep:image", "dep:bytemuck", "dep:notify", "dep:notify-debouncer-mini", "dep:pollster", "dep:log", "dep:env_logger"]
