[package]
name = "arcane-core"
version = "0.13.0"
edition.workspace = true
license.workspace = true
description = "Core library for Arcane - agent-native 2D game engine (TypeScript runtime, renderer, platform layer)"
repository = "https://github.com/anthropics/arcane"
homepage = "https://github.com/anthropics/arcane"
documentation = "https://docs.rs/arcane-core"
keywords = ["game-engine", "2d", "gamedev", "typescript", "v8"]
categories = ["game-engines", "graphics", "game-development"]
readme = "../README.md"

[dependencies]
deno_core = "=0.385.0"
deno_ast = { version = "=0.53.0", features = ["transpiling"] }
deno_error = "=0.7.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Renderer dependencies (behind feature flag)
wgpu = { version = "24", optional = true }
winit = { version = "0.30", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
bytemuck = { version = "1", optional = true, features = ["derive"] }
notify = { version = "7", optional = true }
notify-debouncer-mini = { version = "0.5", optional = true }
pollster = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
tiny_http = { version = "0.12", optional = true }
rodio = { version = "0.20", optional = true }
gilrs = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["renderer"]
renderer = ["dep:wgpu", "dep:winit", "dep:image", "dep:bytemuck", "dep:notify", "dep:notify-debouncer-mini", "dep:pollster", "dep:log", "dep:env_logger", "dep:tiny_http", "dep:rodio", "dep:gilrs"]
